Fix spacing between content. Apply styles to hamburger. Edit readme

--- a/src/components/topPanel/topPanel.module.css
+++ b/src/components/topPanel/topPanel.module.css
@@ -107,13 +107,13 @@
         margin: unset;
         margin-left: 5.5rem;
     }
+}
 
-    .hamburgerBtn {
-        width: 24px;
-        height: 21px;
-        border: none;
-        background-color: transparent;
-    }
+.hamburgerBtn {
+    width: 24px;
+    height: 21px;
+    border: none;
+    background-color: transparent;
 }
 
 .bold {
@@ -124,5 +124,5 @@
     width: 100%;
     height: 1px;
     background-color: var(--color-border);
-    margin-left: 10%;
+    margin-left: 5%;
 }
