--- a/src/routes/root.module.css
+++ b/src/routes/root.module.css
@@ -23,7 +23,7 @@
         flex-direction: row;
         align-items: flex-end;
         align-self: flex-end;
-        justify-content: unset;
+
         width: 100%;
     }
 }
@@ -34,6 +34,7 @@
     margin: 0 auto;
 
     @media (--min-desktop) {
+        margin: 0 0 0 1.5rem;
         margin-bottom: 5%;
     }
 
@@ -108,9 +109,14 @@
 
     @media (--min-desktop) {
         height: 450px;
+        width: 450px;
+        margin: unset;
+        position: relative;
+        left: 5%;
 
         & a {
             height: 274px;
+            width: 274px;
         }
     }
 }
